# Whitted-GI-real-time-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md
includes/: ModelLoader.h  Physics.h  Renderer.h  Scene.h
src/: ModelLoader.cpp  Physics.cpp  main.cpp
src/backends/Metal/: RendererMetal.mm  shader_v02.metal  shader_v03.metal
src/backends/OpenGL/: RendererGL.cpp  shader_v02.comp  shader_v03.comp
src/backends/Vulkan/: RendererVK.cpp
